--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
         <nav class="navbar">
             <a href="/index.html" class="navbar__nav-link">
-                <img class="navbar__logo" src="/assets/logo.png" alt="Logo del ecommerce">
+                <img class="navbar__logo" src="/assets/logo.png" alt="Logo de la empresa">
             </a>
             <div class="user-navbar">
                 <div class="user-navbar__cart-icon-container">
@@ -199,7 +199,7 @@
 
                     <div class="card__body">
                         <div class="card__title">
-                            PRSX LOW MAN VEAU BRODERIE BLANC MILITAIRE
+                            LOW MAN VEAU BRODERIE MILITAIRE
                         </div>
                         <p class="card__description">
                             Calf leather upper with suede details. Embroidery on the shield, the brand's emblem. Rubber
