--- a/pages/about-us/about-us.html
+++ b/pages/about-us/about-us.html
@@ -18,7 +18,7 @@
     <header class="header">
         <nav class="navbar">
             <a href="/index.html" class="navbar__nav-link">
-                <img class="navbar__logo" src="/assets/logo.png" alt="Logo del ecommerce">
+                <img class="navbar__logo" src="/assets/logo.png"  alt="Logo de la empresa">
             </a>
             <div class="user-navbar">
                 <div class="user-navbar__cart-icon-container">
@@ -69,7 +69,7 @@
 
         <div class="mainAboutUs__containerGeneral">
             <div class="mainAboutUs__container1">
-                <img class="mainAboutUs__storeImage image1" src="/assets/img/picStore1.jpg">
+                <img class="mainAboutUs__storeImage image1" src="/assets/img/picStore1.jpg" alt="Foto del local">
     
     
                 <p class="mainAboutUs__about-us-p">
@@ -106,7 +106,7 @@
                     BOOTS ON DISPLAY.
                 </p>
 
-                <img class="mainAboutUs__storeImage image2" src="/assets/img/picStore2.jpg">
+                <img class="mainAboutUs__storeImage image2" src="/assets/img/picStore2.jpg"  alt="Foto del local">
             </div>
 
         </div>
