--- a/pages/about-us/about-us.html
+++ b/pages/about-us/about-us.html
@@ -18,19 +18,19 @@
     <header class="header">
         <nav class="navbar">
             <a href="/index.html" class="navbar__nav-link">
-                <img class="navbar__logo" src="/assets/logo.png"  alt="Logo de la empresa">
+                <img class="navbar__logo" src="/assets/logo.png" alt="Logo de la empresa">
             </a>
-            <div class="user-navbar">
+            <div id="user-navbar" class="user-navbar">
                 <div class="user-navbar__cart-icon-container">
                     <i class="fa-solid fa-cart-shopping"></i>
-                    <div class="user-navbar__cart-counter">
+                    <div id="user-cart-counter" class="user-navbar__cart-counter">
                         12
                     </div>
                 </div>
                 <div class="user-navbar__user-avatar-container">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/100px-Default_pfp.svg.png"
                         class="user-navbar__user-avatar" alt="Imagen de usuario">
-                    <div class="user-navbar__user-name">
+                    <div id="user-name" class="user-navbar__user-name">
                         Juan
                     </div>
                 </div>
@@ -45,17 +45,20 @@
 
 
             <ul class="navbar__nav-links-container">
-                <li class="navbar__nav-item">
+                <li id="nav-inicio" class="navbar__nav-item">
                     <a href="/index.html" class="navbar__nav-link">Inicio</a>
                 </li>
-                <li class="navbar__nav-item">
+                <li id="nav-contacto" class="navbar__nav-item">
                     <a href="/pages/contact/contact.html" class="navbar__nav-link">Contacto</a>
                 </li>
-                <li class="navbar__nav-item">
+                <li id="nav-nosotros" class="navbar__nav-item">
                     <a href="/pages/about-us/about-us.html" class="navbar__nav-link">Nosotros</a>
                 </li>
-                <li class="navbar__nav-item">
+                <li id="nav-registro" class="navbar__nav-item">
                     <a href="/pages/register/register.html" class="navbar__nav-link">Registro</a>
+                </li>
+                <li id="nav-login" class="navbar__nav-item">
+                    <a href="/pages/login/login.html" class="navbar__nav-link">Login</a>
                 </li>
             </ul>
         </nav>
@@ -182,7 +185,7 @@
             </ul>
         </div>
     </footer>
-
+    <script src="/js/general.js"></script>
 </body>
 
 </html>
