--- a/index.html
+++ b/index.html
@@ -24,14 +24,20 @@
                 <div class="user-navbar__cart-icon-container">
                     <i class="fa-solid fa-cart-shopping"></i>
                     <div id="user-cart-counter" class="user-navbar__cart-counter">
-                        12
+                        {c}
+                    </div>
+                </div>
+                <div class="user-navbar__cart-icon-container">
+                    <i class="fa-solid fa-heart"></i>
+                    <div id="user-wish-counter" class="user-navbar__cart-counter">
+                        {w}
                     </div>
                 </div>
                 <div class="user-navbar__user-avatar-container">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/100px-Default_pfp.svg.png"
                         class="user-navbar__user-avatar" alt="Imagen de usuario">
                     <div id="user-name" class="user-navbar__user-name">
-                        Juan
+                        {u}
                     </div>
                 </div>
                 <!-- TODO: avatar de la persona logueada o nombre -->
@@ -174,7 +180,7 @@
     </footer>
     
 <script src="/js/index.js"></script>
-<script src="/js/alert.js"></script>
+<script type="module" src="/js/alert.js"></script>
 <script src="/js/general.js"></script>
 </body>
 
