retoque de errores, funcionalidad del carrito de compras

--- a/pages/about-us/about-us.html
+++ b/pages/about-us/about-us.html
@@ -21,17 +21,23 @@
                 <img class="navbar__logo" src="/assets/logo.png" alt="Logo de la empresa">
             </a>
             <div id="user-navbar" class="user-navbar">
-                <div class="user-navbar__cart-icon-container">
+                <div class="user-navbar__icon-container" id="btn-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     <div id="user-cart-counter" class="user-navbar__cart-counter">
-                        12
+                        {c}
                     </div>
                 </div>
-                <div class="user-navbar__user-avatar-container">
+                <div class="user-navbar__icon-container" id="btn-wish">
+                    <i class="fa-solid fa-heart"></i>
+                    <div id="user-wish-counter" class="user-navbar__cart-counter">
+                        {w}
+                    </div>
+                </div>
+                <div class="user-navbar__user-avatar" id="btn-avatar">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/100px-Default_pfp.svg.png"
                         class="user-navbar__user-avatar" alt="Imagen de usuario">
                     <div id="user-name" class="user-navbar__user-name">
-                        Juan
+                        {u}
                     </div>
                 </div>
                 <!-- TODO: avatar de la persona logueada o nombre -->
@@ -64,7 +70,6 @@
         </nav>
 
     </header>
-
     <main class="mainAboutUs">
         <h1 class="titulo-h1">Nosotros!</h1>
 
@@ -185,6 +190,7 @@
             </ul>
         </div>
     </footer>
+    
     <script src="/js/general.js"></script>
 </body>
 
