--- a/index.html
+++ b/index.html
@@ -21,26 +21,29 @@
                 <img class="navbar__logo" src="/assets/logo.png" alt="Logo de la empresa">
             </a>
             <div id="user-navbar" class="user-navbar">
-                <div class="user-navbar__cart-icon-container">
+                <a href="/pages/cart/cart-detail.html">
+                <div class="user-navbar__icon-container" id="btn-cart" >
                     <i class="fa-solid fa-cart-shopping"></i>
                     <div id="user-cart-counter" class="user-navbar__cart-counter">
                         {c}
                     </div>
                 </div>
-                <div class="user-navbar__cart-icon-container">
+                </a>
+                <a href="/pages/wishlist/wishlist.html">
+                <div class="user-navbar__icon-container" id="btn-wish">
                     <i class="fa-solid fa-heart"></i>
                     <div id="user-wish-counter" class="user-navbar__cart-counter">
                         {w}
                     </div>
                 </div>
-                <div class="user-navbar__user-avatar-container">
+                </a>
+                <div class="user-navbar__user-avatar" id="btn-avatar">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/100px-Default_pfp.svg.png"
                         class="user-navbar__user-avatar" alt="Imagen de usuario">
                     <div id="user-name" class="user-navbar__user-name">
                         {u}
                     </div>
                 </div>
-                <!-- TODO: avatar de la persona logueada o nombre -->
             </div>
 
             <input type="checkbox" class="navbar__menu-btn" id="menu-btn">
@@ -109,16 +112,21 @@
 
         </section>
     </main>
+
+
     <div class="whatsapp-container">
         <a class="whatsapp-container__link" href="https://wa.me/543512531103?text=Hola%20Ranson%20and%20Wilder%20">
             <img src="/assets/img/icons/whatsapp.png" alt="Whatsapp contact link" class="whatsapp-container__img">
         </a>
     </div>
+
     <div class="swipe-up">
         <a href="#" class="swipe-up-container__link">
             <img src="/assets/img/icons/swipe-up.png" alt="Subir Arriba" class="swipe-up__img">
         </a>
     </div>
+
+
     <footer class="footer">
         <div class="footer__column1">
             <ul class="footer__contact-container">
@@ -180,7 +188,6 @@
     </footer>
     
 <script src="/js/index.js"></script>
-<script type="module" src="/js/alert.js"></script>
 <script src="/js/general.js"></script>
 </body>
 
