--- a/pages/cart/cart-detail.html
+++ b/pages/cart/cart-detail.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contactanos</title>
+
+    <title>Home - Ecommerce</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/css/main.css">
+
 </head>
 
 <body>
@@ -19,18 +21,22 @@
                 <img class="navbar__logo" src="/assets/logo.png" alt="Logo de la empresa">
             </a>
             <div id="user-navbar" class="user-navbar">
-                <div class="user-navbar__icon-container" id="btn-cart">
-                    <i class="fa-solid fa-cart-shopping"></i>
-                    <div id="user-cart-counter" class="user-navbar__cart-counter">
-                        {c}
+                <a href="/pages/cart/cart-detail.html">
+                    <div class="user-navbar__icon-container" id="btn-cart">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        <div id="user-cart-counter" class="user-navbar__cart-counter">
+                            {c}
+                        </div>
                     </div>
-                </div>
-                <div class="user-navbar__icon-container" id="btn-wish">
-                    <i class="fa-solid fa-heart"></i>
-                    <div id="user-wish-counter" class="user-navbar__cart-counter">
-                        {w}
+                </a>
+                <a href="/pages/wishlist/wishlist.html">
+                    <div class="user-navbar__icon-container" id="btn-wish">
+                        <i class="fa-solid fa-heart"></i>
+                        <div id="user-wish-counter" class="user-navbar__cart-counter">
+                            {w}
+                        </div>
                     </div>
-                </div>
+                </a>
                 <div class="user-navbar__user-avatar" id="btn-avatar">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/100px-Default_pfp.svg.png"
                         class="user-navbar__user-avatar" alt="Imagen de usuario">
@@ -38,7 +44,6 @@
                         {u}
                     </div>
                 </div>
-                <!-- TODO: avatar de la persona logueada o nombre -->
             </div>
 
             <input type="checkbox" class="navbar__menu-btn" id="menu-btn">
@@ -69,56 +74,35 @@
 
     </header>
 
-    <main class="main-contact">
+    <main class="main">
+        <section class="section-cards">
 
-        <div class="main-contact__map">
-            <h1 class="titulo-h1">Visitanos!</h1>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d8040.450896753331!2d-64.54006906331583!3d-32.08025068519654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1salquimia!5e0!3m2!1ses-419!2sar!4v1672866931106!5m2!1ses-419!2sar"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-        </div>
+            <div class="section-cards__category">
+                <h1 id="title-h1">
+                    TU CARRITO DE COMPRAS
+                </h1>
+            </div>
 
-        <div class="main-contact__form">
-            <h1 class="titulo-h1">Contactanos!</h1>
-            <form class="contact-form">
-                <div class="field-container contact-form__item">
-                    <label class="field-container__label" for="name">Nombre</label><br>
-                    <input class="field-container__input" type="text" name="name" id="name"
-                        placeholder="Nombre y Apellido">
-                </div>
+            <div id="row-cart-detail" class="row-cart-detail">
 
-                <div class="field-container contact-form__item">
-                    <label class="field-container__label" for="name">Mail</label><br>
-                    <input class="field-container__input" type="mail" name="mail" id="mail"
-                        placeholder="correo@dominio.com"
-                        pattern="[a-zA-Z0-9!#$%&'*_+-]([\.]?[a-zA-Z0-9!#$%&'*_+-])+@[a-zA-Z0-9]([^@&%$\/()=?¿!.,:;]|\d)+[a-zA-Z0-9][\.][a-zA-Z]{2,4}([\.][a-zA-Z]{2})?">
-                </div>
+            </div>
 
-                <div class="field-container contact-form__item">
-                    <label class="field-container__label">Mensaje</label><br>
-                    <textarea class="field-container__input field-container__area" name="message"
-                        id="message"></textarea>
-                </div>
-
-                <button type="submit" class="contact-form__btn">Enviar</button>
-
-            </form>
-        </div>
-
+        </section>
     </main>
 
+
     <div class="whatsapp-container">
-        <a href="https://wa.me/543512531103?text=Hola%20Ranson%20and%20Wilder%20" class="whatsapp-container__link">
+        <a class="whatsapp-container__link" href="https://wa.me/543512531103?text=Hola%20Ranson%20and%20Wilder%20">
             <img src="/assets/img/icons/whatsapp.png" alt="Whatsapp contact link" class="whatsapp-container__img">
         </a>
     </div>
+
     <div class="swipe-up">
         <a href="#" class="swipe-up-container__link">
             <img src="/assets/img/icons/swipe-up.png" alt="Subir Arriba" class="swipe-up__img">
         </a>
     </div>
+
 
     <footer class="footer">
         <div class="footer__column1">
@@ -179,7 +163,8 @@
             </ul>
         </div>
     </footer>
-    
+
+    <script src="/js/cart-detail.js"></script>
     <script src="/js/general.js"></script>
 </body>
 
