--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -17,17 +17,23 @@
                 <img class="navbar__logo" src="/assets/logo.png" alt="Logo de la empresa">
             </a>
             <div id="user-navbar" class="user-navbar">
-                <div class="user-navbar__cart-icon-container">
+                <div class="user-navbar__icon-container" id="btn-cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     <div id="user-cart-counter" class="user-navbar__cart-counter">
-                        12
+                        {c}
                     </div>
                 </div>
-                <div class="user-navbar__user-avatar-container">
+                <div class="user-navbar__icon-container" id="btn-wish">
+                    <i class="fa-solid fa-heart"></i>
+                    <div id="user-wish-counter" class="user-navbar__cart-counter">
+                        {w}
+                    </div>
+                </div>
+                <div class="user-navbar__user-avatar" id="btn-avatar">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/100px-Default_pfp.svg.png"
                         class="user-navbar__user-avatar" alt="Imagen de usuario">
                     <div id="user-name" class="user-navbar__user-name">
-                        Juan
+                        {u}
                     </div>
                 </div>
                 <!-- TODO: avatar de la persona logueada o nombre -->
@@ -60,7 +66,6 @@
         </nav>
 
     </header>
-
     <h1 class="titulo-h1">REGISTRO DE USUARIO</h1>
     <main class="main">
         
