lista de favoritos funcional, y carrito funcional, cambio de clases grid a flexbox, responsive funcional.

--- a/pages/cart/cart-detail.html
+++ b/pages/cart/cart-detail.html
@@ -22,20 +22,20 @@
             </a>
             <div id="user-navbar" class="user-navbar">
                 <a href="/pages/cart/cart-detail.html">
-                    <div class="user-navbar__icon-container" id="btn-cart">
-                        <i class="fa-solid fa-cart-shopping"></i>
-                        <div id="user-cart-counter" class="user-navbar__cart-counter">
-                            {c}
-                        </div>
+                <div class="user-navbar__icon-container" id="btn-cart" >
+                    <i class="fa-solid fa-cart-shopping"></i>
+                    <div id="user-cart-counter" class="user-navbar__cart-counter">
+                        {c}
                     </div>
+                </div>
                 </a>
                 <a href="/pages/wishlist/wishlist.html">
-                    <div class="user-navbar__icon-container" id="btn-wish">
-                        <i class="fa-solid fa-heart"></i>
-                        <div id="user-wish-counter" class="user-navbar__cart-counter">
-                            {w}
-                        </div>
+                <div class="user-navbar__icon-container" id="btn-wish">
+                    <i class="fa-solid fa-heart"></i>
+                    <div id="user-wish-counter" class="user-navbar__cart-counter">
+                        {w}
                     </div>
+                </div>
                 </a>
                 <div class="user-navbar__user-avatar" id="btn-avatar">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/100px-Default_pfp.svg.png"
@@ -163,9 +163,10 @@
             </ul>
         </div>
     </footer>
-
-    <script src="/js/cart-detail.js"></script>
+    <script src="/js/alert.js"></script>
     <script src="/js/general.js"></script>
+    <script src="/js/cart-detail.js"></script>
+    
 </body>
 
 </html>
