--- a/index.html
+++ b/index.html
@@ -186,9 +186,11 @@
             </ul>
         </div>
     </footer>
-    
-<script src="/js/index.js"></script>
+
+<script src="/js/alert.js"></script>
 <script src="/js/general.js"></script>
+<script src="/js/index.js"></script>
+
 </body>
 
 </html>
