--- a/pages/about-us/about-us.html
+++ b/pages/about-us/about-us.html
@@ -21,18 +21,22 @@
                 <img class="navbar__logo" src="/assets/logo.png" alt="Logo de la empresa">
             </a>
             <div id="user-navbar" class="user-navbar">
-                <div class="user-navbar__icon-container" id="btn-cart">
+                <a href="/pages/cart/cart-detail.html">
+                <div class="user-navbar__icon-container" id="btn-cart" >
                     <i class="fa-solid fa-cart-shopping"></i>
                     <div id="user-cart-counter" class="user-navbar__cart-counter">
                         {c}
                     </div>
                 </div>
+                </a>
+                <a href="/pages/wishlist/wishlist.html">
                 <div class="user-navbar__icon-container" id="btn-wish">
                     <i class="fa-solid fa-heart"></i>
                     <div id="user-wish-counter" class="user-navbar__cart-counter">
                         {w}
                     </div>
                 </div>
+                </a>
                 <div class="user-navbar__user-avatar" id="btn-avatar">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/100px-Default_pfp.svg.png"
                         class="user-navbar__user-avatar" alt="Imagen de usuario">
@@ -40,7 +44,6 @@
                         {u}
                     </div>
                 </div>
-                <!-- TODO: avatar de la persona logueada o nombre -->
             </div>
 
             <input type="checkbox" class="navbar__menu-btn" id="menu-btn">
