--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -24,26 +24,29 @@
                 <img class="navbar__logo" src="/assets/logo.png" alt="Logo de la empresa">
             </a>
             <div id="user-navbar" class="user-navbar">
-                <div class="user-navbar__cart-icon-container">
+                <a href="/pages/cart/cart-detail.html">
+                <div class="user-navbar__icon-container" id="btn-cart" >
                     <i class="fa-solid fa-cart-shopping"></i>
                     <div id="user-cart-counter" class="user-navbar__cart-counter">
-                        {cart}
+                        {c}
                     </div>
                 </div>
-                <div class="user-navbar__cart-icon-container">
-                    <i class="fa-solid fa-cart-shopping"></i>
-                    <div id="user-cart-counter" class="user-navbar__cart-counter">
-                        {whish}
+                </a>
+                <a href="/pages/wishlist/wishlist.html">
+                <div class="user-navbar__icon-container" id="btn-wish">
+                    <i class="fa-solid fa-heart"></i>
+                    <div id="user-wish-counter" class="user-navbar__cart-counter">
+                        {w}
                     </div>
                 </div>
-                <div class="user-navbar__user-avatar-container">
+                </a>
+                <div class="user-navbar__user-avatar" id="btn-avatar">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/100px-Default_pfp.svg.png"
                         class="user-navbar__user-avatar" alt="Imagen de usuario">
                     <div id="user-name" class="user-navbar__user-name">
-                        {user}
+                        {u}
                     </div>
                 </div>
-                <!-- TODO: avatar de la persona logueada o nombre -->
             </div>
 
             <input type="checkbox" class="navbar__menu-btn" id="menu-btn">
@@ -174,8 +177,10 @@
             </ul>
         </div>
     </footer>
-    <script src="/js/login.js"></script>
+    <script src="/js/alert.js"></script>
     <script src="/js/general.js"></script>
+    <script src="/js/login.js"></script>
+
 </body>
 
 </html>
