--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
             </a>
             <div id="user-navbar" class="user-navbar">
                 <a href="/pages/cart/cart-detail.html">
-                <div class="user-navbar__icon-container" id="btn-cart" >
-                    <i class="fa-solid fa-cart-shopping"></i>
-                    <div id="user-cart-counter" class="user-navbar__cart-counter">
-                        {c}
+                    <div class="user-navbar__icon-container" id="btn-cart">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        <div id="user-cart-counter" class="user-navbar__cart-counter">
+                            {c}
+                        </div>
                     </div>
-                </div>
                 </a>
                 <a href="/pages/wishlist/wishlist.html">
-                <div class="user-navbar__icon-container" id="btn-wish">
-                    <i class="fa-solid fa-heart"></i>
-                    <div id="user-wish-counter" class="user-navbar__cart-counter">
-                        {w}
+                    <div class="user-navbar__icon-container" id="btn-wish">
+                        <i class="fa-solid fa-heart"></i>
+                        <div id="user-wish-counter" class="user-navbar__cart-counter">
+                            {w}
+                        </div>
                     </div>
-                </div>
                 </a>
                 <div class="user-navbar__user-avatar" id="btn-avatar">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/100px-Default_pfp.svg.png"
@@ -46,12 +46,11 @@
                 </div>
             </div>
 
+            <!-- MENU HAMBURGUESA -->
             <input type="checkbox" class="navbar__menu-btn" id="menu-btn">
-
             <label for="menu-btn" class="navbar__menu-label">
                 <span class="navbar__menu-icon"></span>
             </label>
-
 
             <ul class="navbar__nav-links-container">
                 <li id="nav-inicio" class="navbar__nav-item">
@@ -69,13 +68,28 @@
                 <li id="nav-login" class="navbar__nav-item">
                     <a href="/pages/login/login.html" class="navbar__nav-link">Login</a>
                 </li>
+
+                <li class="user-icons">
+                    <div class="user-navbar__icon-container" id="btn-wish">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                    </div>
+                    <div class="user-navbar__icon-container" id="btn-wish">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <div class="user-navbar__user-avatar" id="btn-avatar">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/100px-Default_pfp.svg.png"
+                            class="user-navbar__user-avatar" alt="Imagen de usuario">
+                    </div>
+                </li>
             </ul>
+
         </nav>
 
     </header>
     <!-- TODO: Implementar carousel en 2do módulo -->
     <main class="main">
         <section class="section-cards">
+
             <header class="section-cards__header">
                 <div class="section-cards__title-container">
                     <h1 class="section-cards__title">
@@ -90,7 +104,7 @@
                     <div class="product-search">
                         <div class="product-search__icon"><i class="fa-solid fa-magnifying-glass"></i></div>
                         <input placeholder="Que deseas comprar hoy ?" type="text" class="product-search__input">
-                        <button class="product-search__btn" onclick="addCard()" >Buscar</button>
+                        <button class="product-search__btn" onclick="addCard()">Buscar</button>
                     </div>
 
                     <div class="section-cards__products-count">
@@ -128,68 +142,13 @@
 
 
     <footer class="footer">
-        <div class="footer__column1">
-            <ul class="footer__contact-container">
-                <li class="footer__contact-item">
-                    <a href="#" class="footer__contact-link">
-                        <i class="fa-brands fa-facebook footer__contact-icon footer__contact-icon--facebook"></i>
-                        Ranson and Wilder
-                    </a>
-                </li>
-                <li class="footer__contact-item">
-                    <a href="#" class="footer__contact-link">
-                        <i class="fa-brands fa-instagram 
-                        footer__contact-icon
-                        footer__contact-icon--instagram"></i>
-                        Ranson_Wilder
-                    </a>
-                </li>
-                <li class="footer__contact-item">
-                    <a href="#" class="footer__contact-link">
-                        <i class="fa-brands fa-linkedin 
-                        footer__contact-icon
-                        footer__contact-icon--linkedin"></i>
-                        Ranson_Wilder
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="footer__column footer__center">
-            <img src="/assets/logo.png" alt="Company Logo" class="footer__logo">
-            <h2 class="footer__company-name">
-                Ransom & Wilder
-            </h2>
-            <p class="footer__copyrigth">
-                Todos los derechos reservados a Ransom & Wilder Company
-            </p>
-        </div>
-        <div class="footer__column">
-            <ul class="footer__contact-container">
-                <li class="footer__contact-item">
-                    <a href="tel://+541115514452)" class="footer__contact-link">
-                        <i class="fa-solid fa-square-phone-flip footer__contact-icon"></i>
-                        Telefono (+54-11-15514452)
-                    </a>
-                </li>
-                <li class="footer__contact-item">
-                    <a href="https://goo.gl/maps/CCm7u2cHw5U7m2fD7" class="footer__contact-link">
-                        <i class="fa-solid fa-location-dot footer__contact-icon"></i>
-                        Street 135 AV Wilder, Los Angeles
-                    </a>
-                </li>
-                <li class="footer__contact-item">
-                    <a href="mail:websell@ransomwilder.com" class="footer__contact-link">
-                        <i class="fa-solid fa-envelope footer__contact-icon"></i>
-                        Email: websell@ransomwilder.com
-                    </a>
-                </li>
-            </ul>
-        </div>
+
     </footer>
 
-<script src="/js/alert.js"></script>
-<script src="/js/general.js"></script>
-<script src="/js/index.js"></script>
+    <script src="/js/render.js"></script>
+    <script src="/js/alert.js"></script>
+    <script src="/js/general.js"></script>
+    <script src="/js/index.js"></script>
 
 </body>
 
