--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -76,16 +76,12 @@
         </nav>
 
     </header>
-
-    <main class="main">
-
-        <h1 class="titulo-h1">Login</h1>
-
-        <section class="section">
-
-        <div class="login-container">
-            <form id="login-form" class="form-container">
     
+    <main class="main">
+        <h1 class="titulo-h1">Login</h1>
+        <section class="section">
+        <div class="register-form">
+            <form id="login-form" class="form-container">
                 <div class="mail-container form-container__item">
                     <label class="mail-container__label" for="email">Email</label>
                     <input class="mail-container__input input-form" id="email" type="email" name="mail"
@@ -119,64 +115,9 @@
         </a>
     </div>
     <footer class="footer">
-        <div class="footer__column1">
-            <ul class="footer__contact-container">
-                <li class="footer__contact-item">
-                    <a href="#" class="footer__contact-link">
-                        <i class="fa-brands fa-facebook footer__contact-icon footer__contact-icon--facebook"></i>
-                        Ranson and Wilder
-                    </a>
-                </li>
-                <li class="footer__contact-item">
-                    <a href="#" class="footer__contact-link">
-                        <i class="fa-brands fa-instagram 
-                        footer__contact-icon
-                        footer__contact-icon--instagram"></i>
-                        Ranson_Wilder
-                    </a>
-                </li>
-                <li class="footer__contact-item">
-                    <a href="#" class="footer__contact-link">
-                        <i class="fa-brands fa-linkedin 
-                        footer__contact-icon
-                        footer__contact-icon--linkedin"></i>
-                        Ranson_Wilder
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="footer__column footer__center">
-            <img src="/assets/logo.png" alt="Company Logo" class="footer__logo">
-            <h2 class="footer__company-name">
-                Ransom & Wilder
-            </h2>
-            <p class="footer__copyrigth">
-                Todos los derechos reservados a Ransom & Wilder Company
-            </p>
-        </div>
-        <div class="footer__column">
-            <ul class="footer__contact-container">
-                <li class="footer__contact-item">
-                    <a href="tel://+541115514452)" class="footer__contact-link">
-                        <i class="fa-solid fa-square-phone-flip footer__contact-icon"></i>
-                        Telefono (+54-11-15514452)
-                    </a>
-                </li>
-                <li class="footer__contact-item">
-                    <a href="https://goo.gl/maps/CCm7u2cHw5U7m2fD7" class="footer__contact-link">
-                        <i class="fa-solid fa-location-dot footer__contact-icon"></i>
-                        Street 135 AV Wilder, Los Angeles
-                    </a>
-                </li>
-                <li class="footer__contact-item">
-                    <a href="mail:websell@ransomwilder.com" class="footer__contact-link">
-                        <i class="fa-solid fa-envelope footer__contact-icon"></i>
-                        Email: websell@ransomwilder.com
-                    </a>
-                </li>
-            </ul>
-        </div>
+
     </footer>
+    <script src="/js/render.js"></script>
     <script src="/js/alert.js"></script>
     <script src="/js/general.js"></script>
     <script src="/js/login.js"></script>
