funcionalidad de actualizar datos de perfil de usuario

--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -68,7 +68,7 @@
                 <div class="mail-container form-container__item">
                     <label class="mail-container__label" for="email">Email</label>
                     <input class="mail-container__input input-form" id="email" type="email" name="mail"
-                        minlength="8" maxlength="45" onfocus="quitMailErr()"
+                        minlength="8" maxlength="45"
                         pattern="[a-zA-Z0-9!#$%&'*_+-]([\.]?[a-zA-Z0-9!#$%&'*_+-])+@[a-zA-Z0-9]([^@&%$\/()=?¿!.,:;]|\d)+[a-zA-Z0-9][\.][a-zA-Z]{2,4}([\.][a-zA-Z]{2})?"
                         id="email" placeholder="example@email.com" required>
                 </div>
