--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -62,45 +62,45 @@
             <form id="register-form" class="form-container">
 
                 <div class="name-container form-container__item">
-                    <label class="name-container__label" for="name">Nombre Completo</label>
-                    <input class="name-container__input input-form" type="text" name="name" id="name"
+                    <label class="form-container__label" for="name">Nombre Completo</label>
+                    <input class="form-container__input input-form" type="text" name="name" id="name"
                         placeholder="Nombre y Apellido" required>
                 </div>
 
                 <div class="mail-container form-container__item">
-                    <label class="mail-container__label" for="email">Email</label>
-                    <input class="mail-container__input input-form" id="email" type="email" name="mail" minlength="8"
+                    <label class="form-container__label" for="email">Email</label>
+                    <input class="form-container__input input-form" id="email" type="email" name="mail" minlength="8"
                         maxlength="45" onfocus="quitMailErr()"
                         pattern="[a-zA-Z0-9!#$%&'*_+-]([\.]?[a-zA-Z0-9!#$%&'*_+-])+@[a-zA-Z0-9]([^@&%$\/()=?¿!.,:;]|\d)+[a-zA-Z0-9][\.][a-zA-Z]{2,4}([\.][a-zA-Z]{2})?"
                         id="email" placeholder="example@email.com" required>
                 </div>
 
                 <div class="password-container form-container__item">
-                    <label class="password-container__label" for="password1">Contraseña</label>
-                    <input class="password-container__input input-form" type="password" name="password1" id="password1"
+                    <label class="form-container__label" for="password1">Contraseña</label>
+                    <input class="form-container__input input-form" type="password" name="password1" id="password1"
                         onfocus="quitPassErr()" required>
                 </div>
 
                 <div class="reply-password-container form-container__item">
-                    <label class="reply-password-container__label" for="password2">Repetir Contraseña</label>
-                    <input class="reply-password-container__input input-form" type="password" name="password2"
+                    <label class="form-container__label" for="password2">Repetir Contraseña</label>
+                    <input class="form-container__input input-form" type="password" name="password2"
                         id="password2" onfocus="quitPassErr()" required>
                 </div>
 
                 <div class="age-container form-container__item">
-                    <label class="age-container__label" for="age">Edad</label>
-                    <input class="age-container__input input-form" type="number" name="age" id="age" min="12" max="110"
+                    <label class="form-container__label" for="age">Edad</label>
+                    <input class="form-container__input input-form" type="number" name="age" id="age" min="12" max="110"
                         step="1" required>
                 </div>
 
                 <div class="born-container form-container__item">
-                    <label class="born-container__label" for="born-date">Fecha de Nacimiento</label>
-                    <input class="born-container__input input-form" type="date" name="borndate" id="born-date" required>
+                    <label class="form-container__label" for="born-date">Fecha de Nacimiento</label>
+                    <input class="form-container__input input-form" type="date" name="borndate" id="born-date" required>
                 </div>
 
                 <div class="born-country-container form-container__item">
-                    <label class="born-country-container__label" for="born-country">Pais de Nacimiento</label>
-                    <select id="country" name="country" class="born-country-container__country" required>
+                    <label class="form-container__label" for="born-country">Pais de Nacimiento</label>
+                    <select id="country" name="country" class="form-container__input" required>
                         <option value="AF">Afghanistan</option>
                         <option value="AX">Åland Islands</option>
                         <option value="AL">Albania</option>
