funciones modal, mejora de input numericos (sass y js), cambios de estilo en scrolbar

--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -447,8 +447,8 @@
                         </div>
 
                         <div class="submit">
-                            <input id="cancel" class="submit__button-cancel" value="Cancelar" type="button">
-                            <input id="submit" class="submit__button-save" value="Actualizar" type="submit">
+                            <input id="cancel" class="submit__button-cancel button__cancel" value="Cancelar" type="button">
+                            <input id="submit" class="submit__button-save button__ok" value="Actualizar" type="submit">
                         </div>
                     </form>
                 </div>
