--- a/pages/profile/orders.html
+++ b/pages/profile/orders.html
@@ -58,22 +58,16 @@
     </header>
 
     <main class="main">
-        <section class="section-cards">
+        <section class="section-orders">
 
-            <div class="section-cards__category">
+            <div class="section-orders__category">
                 <h1 id="title-h1">
-                    TU CARRITO DE COMPRAS
+                    TUS ORDENES
                 </h1>
             </div>
 
             <div id="row-cart-detail" class="row-cart-detail">
                 
-            </div>
-
-            <div class="order" id="order-buy">
-                <div class="order__container">
-                    <button id="generate-order" class="button__ok order__button"><i class="fa-sharp fa-regular fa-credit-card"></i>  Comprar</button>
-                </div>
             </div>
 
         </section>
@@ -87,7 +81,7 @@
     <script src="/js/general.js"></script>
     <script src="/js/render.js"></script>
     <script src="/js/alert.js"></script>
-    <script src="/js/cart-detail.js"></script>
+    <script src="/js/orders-detail.js"></script>
     
 </body>
 
