--- a/pages/profile/orders.html
+++ b/pages/profile/orders.html
@@ -66,7 +66,7 @@
                 </h1>
             </div>
 
-            <div id="row-cart-detail" class="row-cart-detail">
+            <div id="row-order-detail" class="row-order-detail">
                 
             </div>
 
